--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -1,6 +1,7 @@
 /* <link rel="stylesheet" href="css/opmaak.css" type="text/css"> */
 
 @import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap');
 
 body {
   background-image: url("achtergrond.png");
@@ -12,7 +13,7 @@ h1 {
   margin-top:50px;
   font-size:350%;
   text-align:center;
-  font-family: 'Oleo Script Swash Caps', cursive;
+  font-family: 'Oleo Script Swash Caps';
 }
 
 .page {
@@ -36,6 +37,7 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  font-family: 'Merriweather Sans', sans-serif;
 }
 @keyframes menuhover {
 
