Titels verandert en kleur van de pagina h1 verandert

--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -9,7 +9,7 @@ body {
   background-attachment: fixed;
 }
 h1 {
-  color: yellow;
+  color: lightgreen;
   margin-top:50px;
   font-size:350%;
   text-align:center;
