De titel is nu denk ik echt lichtgroen.

--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -9,7 +9,7 @@ body {
   background-attachment: fixed;
 }
 h1 {
-  color: lightgreen;
+  color: #90EE90;
   margin-top:50px;
   font-size:350%;
   text-align:center;
