--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -8,25 +8,31 @@ body {
   background-repeat: repeat;
   background-attachment: fixed;
 }
-h1 {
+.title {
   color: #90EE90;
   margin-top:50px;
   font-size:350%;
-  text-align:center;
   font-family: 'Oleo Script Swash Caps';
 }
 
 .page {
   font-family:Arial, Helvetica, sans-serif;
 }
-ul {
+.text, .title {
+  text-align:center;
+}
+.text {
+  font-size:125%;
+  color: yellow;
+}
+.nav ul {
   display: inline-block;
   margin: 0;
   padding: 0;
   overflow: hidden;
   list-style-type: none;
 }
-ul li {
+.nav li {
   float: left;
   margin-left:70px;
   font-size:180%;
