--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -38,9 +38,7 @@ body {
   font-size:180%;
 }
 .nav {
-  position: absolute;
   overflow: hidden;
-  margin-top:-65px;
 }
 li a {
   display: block;
@@ -79,4 +77,19 @@ li:hover {
   text-align:center;
   font-size:150%;
   color: white;
+}
+.projecten a {
+  display: block;
+  text-align: center;
+  text-decoration:none;
+  font-size:150%;
+  color: white;
+}
+#ea {
+  margin-top:50px;
+}
+.projectdownload {
+  text-align:center;
+  text-decoration:none;
+  font-size:150%;
 }
