--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -77,6 +77,7 @@ li:hover {
   text-align:center;
   font-size:150%;
   color: white;
+  margin-top:0px;
 }
 .projecten a {
   display: block;
@@ -100,4 +101,7 @@ li:hover {
   font-size:175%;
   color:yellow;
   text-align:center;
+}
+.exlink {
+  color:yellow;
 }
