Social media foto tweaks

--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -118,6 +118,6 @@ li:hover {
 .logolinks img {
   border: 3px solid black;
   border-style:round;
-  width:100px;
-  height:100px;
+  width:5%;
+  height:5%;
 }
