Cursor is nu een pointer als je over levels hovert in badges pagina

--- a/css/opmaak.css
+++ b/css/opmaak.css
@@ -73,15 +73,16 @@ li:hover {
   padding:15px;
   color:white;
 }
+.levels:hover {
+  cursor: pointer;
+}
 .modules p {
   text-align:center;
   font-size:150%;
   color: white;
   margin-top:0px;
 }
-.modules:hover {
-  cursor: pointer;
-}
+
 .projecten a {
   display: block;
   text-align: center;
